# NASA-JPL-Capstone

./: .gitignore  README.md
Admin/Timesheets/: timesheet_template.xlsx
admin/cli/: a.out
admin/meeting_attendance/: attendance.md  semester1_attendance.md  semester2_attendance.md
admin/meeting_transcriptions/: 10_13.txt  10_6.txt  11_10.txt
cli/: .dockerignore  Dockerfile  Log.cpp  Log.hpp  compose.yaml  main.cpp  ollama.hpp  tests.cpp
meeting_transcriptions/: 9_17.txt
pivision/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  EXPLAIN.md  README.md  install.sh
pivision/cmd/: log_to_csv.cpp  main.cpp
pivision/config/: example.json
pivision/config/PCat1/gemma3_27b/: qat.json
pivision/config/PCat1/gemma3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat1/qwen3_4b/: q8_0.json
pivision/config/PCat1/qwen3_8b/: q4_k_m.json  q8_0.json
pivision/config/PCat2/gemma3_12b/: q4_k_m.json  q8_0.json
pivision/config/PCat2/gemma3_27b/: qat.json
pivision/config/PCat2/gemma3_4b/: q4_k_m.json  qat.json
pivision/config/PCat2/qwen3_4b/: q8_0.json
pivision/config/PCat2/qwen3_8b/: q4_k_m.json
pivision/config/PCat3/PCat3_A/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_A/gemma3_27b/: qat.json
pivision/config/PCat3/PCat3_A/gemma3_4b/: qat.json
pivision/config/PCat3/PCat3_A/qwen3_4b/: q8_0.json
pivision/config/PCat3/PCat3_A/qwen3_8b/: q4_k_m.json  q8_0.json
pivision/config/PCat3/PCat3_B/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_B/gemma3_27b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_B/gemma3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_B/qwen3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_B/qwen3_8b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_C/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_C/gemma3_27b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_C/gemma3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_C/qwen3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/PCat3_C/qwen3_8b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat3/gemma3_12b/: q4_k_m.json
pivision/config/PCat3/gemma3_27b/: qat.json
pivision/config/PCat3/gemma3_4b/: q4_k_m.json  q8_0.json
pivision/config/PCat3/qwen3_4b/: q4_k_m.json  q8_0.json
pivision/config/PCat4/PCat4_A/gemma3_27b/: qat.json
pivision/config/PCat4/PCat4_A/gemma3_4b/: q8_0.json  qat.json
pivision/config/PCat4/PCat4_A/qwen3_4b/: q4_k_m.json  q8_0.json
pivision/config/PCat4/PCat4_A/qwen3_8b/: q8_0.json
pivision/config/PCat4/PCat4_B/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/PCat4_B/gemma3_27b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/PCat4_B/gemma3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/PCat4_B/qwen3_4b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/PCat4_B/qwen3_8b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat4/gemma3_27b/: qat.json
pivision/config/PCat4/gemma3_4b/: q4_k_m.json
pivision/config/PCat4/qwen3_4b/: q4_k_m.json
pivision/config/PCat4/qwen3_8b/: q4_k_m.json  q8_0.json
pivision/config/PCat5/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat5/gemma3_4b/: q4_k_m.json  qat.json
pivision/config/PCat5/qwen3_4b/: q4_k_m.json
pivision/config/PCat5/qwen3_8b/: q4_k_m.json  q8_0.json
pivision/config/PCat6/gemma3_12b/: q4_k_m.json
pivision/config/PCat6/gemma3_4b/: q4_k_m.json  qat.json
pivision/config/PCat6/qwen3_4b/: q4_k_m.json  q8_0.json
pivision/config/PCat6/qwen3_8b/: q4_k_m.json
pivision/config/PCat7/gemma3_12b/: q4_k_m.json  q8_0.json  qat.json
pivision/config/PCat7/gemma3_4b/: qat.json
pivision/config/PCat7/qwen3_4b/: q4_k_m.json
pivision/config/PCat7/qwen3_8b/: q4_k_m.json
pivision/examples/prompts/: compare_images.txt  describe_scene.txt  identify_rocks.txt
pivision/include/: pivision.h
pivision/src/: core.cpp
testing/: README.md
(+354 files in other folders)
